# knoting

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  README.md  changes.diff
.github/workflows/: cpp.yml  format.yml
cmake/: FindFMod.cmake  FindGLFW.cmake  FindMbedTLS.cmake  FindNoesisGUI.cmake  Findsodium.cmake
core/: CMakeLists.txt
core/inc/knoting/: Debug_gui.h  Font.h  Menu.h  PauseMenu.h  aggregate.h  assert.h  asset.h  asset_manager.h  audio_listener.h  audio_source.h  audio_subsystem.h  camera.h  camera_rotation.h  client_player.h  collision_detection.h  component.h  components.h  cube_atlas.h  debug_physics_widget.h  demo_widget.h  engine.h  entry.h  event_callback.h  font_manager.h  forward_renderer.h  framebuffer_manager.h  game_object.h  health.h  input_manager.h  instance_mesh.h  instance_script.h  light_data.h  log.h  material.h  mesh.h  networked_client.h  networked_server.h  networking_types.h  packrect.h  particle_system.h  (+29 more)
core/inc/knoting/asset_loaders/: image_loader.h  model_loader.h
core/src/: Debug_gui.cpp  Font.cpp  Menu.cpp  PauseMenu.cpp  RenderDevice.cpp  aggregate.cpp  asset.cpp  asset_manager.cpp  audio_listener.cpp  audio_source.cpp  audio_subsystem.cpp  camera.cpp  camera_rotation.cpp  client_player.cpp  collision_detection.cpp  cube_atlas.cpp  debug_physics_widget.cpp  demo_widget.cpp  engine.cpp  entry.cpp  event_callback.cpp  font_manager.cpp  forward_renderer.cpp  framebuffer_manager.cpp  game_object.cpp  health.cpp  image_loader.cpp  input_manager.cpp  instance_mesh.cpp  instance_script.cpp  knoting.cpp  light_data.cpp  log.cpp  material.cpp  mesh.cpp  model_loader.cpp  networked_client.cpp  networked_server.cpp  particle_system.cpp  particles.cpp  (+23 more)
editor/: CMakeLists.txt
editor/src/: demo_widget.cpp  demo_widget.h  editor.cpp  editor.h  editor_precompiled_shader.h  main.cpp  widget.h  widget_subsystem.cpp  widget_subsystem.h
res/: CMakeLists.txt  physicsSerialScene.json  serialScene.json  skyboxScene.json
res/Sanctum/: InSanct_Max_Table_Big_Chair.mat  InSanct_Max_Table_Big_Chair.msh  SanctumCat.mat  SanctumCat.msh  SanctumChair.mat  SanctumChair.msh  SanctumDesk.mat  SanctumDesk.msh  SanctumTable.mat  SanctumTable.msh  SanctumThrone.mat  SanctumThrone.msh  inner_sanctum_max_Wall_Corner_In_L_Out_R.msh  inner_sanctum_max_Wall_Corner_In_L_Out_R_end.msh  inner_sanctum_max_Wall_Corner_In_R.msh  inner_sanctum_max_Wall_Corner_In_R_Out_L.msh  inner_sanctum_max_Wall_Corner_In_R_Out_L_end.msh  inner_sanctum_max_Wall_Corner_In_V2_Both.msh  inner_sanctum_max_Wall_Corner_In_V2_L.msh  inner_sanctum_max_Wall_Corner_In_V2_L_Corner.msh  inner_sanctum_max_Wall_Corner_In_V2_L_Out_R.msh  inner_sanctum_max_Wall_Corner_In_V2_L_Out_R_end.msh  inner_sanctum_max_Wall_Corner_In_V2_L_end.msh  inner_sanctum_max_Wall_Corner_In_V2_R.msh  inner_sanctum_max_Wall_Corner_In_V2_R_Corner.msh  inner_sanctum_max_Wall_Corner_In_V2_R_Out_L.msh  inner_sanctum_max_Wall_Corner_In_V2_R_Out_L_end.msh  inner_sanctum_max_Wall_Corner_In_V2_R_end.msh  inner_sanctum_max_Wall_Corner_Out_Both_end_L.mat  inner_sanctum_max_Wall_Corner_Out_Both_end_L.msh  inner_sanctum_max_Wall_Corner_Out_Both_end_R.msh  inner_sanctum_max_Wall_Corner_Out_Both_end_both.msh  inner_sanctum_max_Wall_Corner_Out_L.msh  inner_sanctum_max_Wall_Corner_Out_L_end_L.msh  inner_sanctum_max_Wall_Corner_Out_L_end_R.msh  inner_sanctum_max_Wall_Corner_Out_L_end_both.msh  inner_sanctum_max_Wall_Corner_Out_R.msh  inner_sanctum_max_Wall_Corner_Out_R_end_L.msh  inner_sanctum_max_Wall_Corner_Out_R_end_R.mat  inner_sanctum_max_Wall_Corner_Out_R_end_R.msh  (+12 more)
res/misc/: Destructible.ts  EvilGeniusLight.mtl  New_Wall2.mtl  knoting.d.ts  player.ts  player_movement.ts  reservoir.ts  tsconfig.json
res/scripts/: tsconfig.json
res/scripts/src/: bullet.ts  camera.ts  knoting.d.ts  math.ts  paintable.ts  pauseCamera.ts  player.ts  playerMovement.ts  respawnManager.ts
res/shaders/: common.sh
res/shaders/bump/: fs_bump.sc
res/shaders/cubes/: fs_cubes.sc  vs_cubes.sc
res/shaders/paint/: fs_paint.sc  varying.def.sc  vs_paint.sc
res/shaders/particles/: fs_particle.sc
res/shaders/postprocess/: fs_postProcess.sc  fs_pp.sc  vs_postProcess.sc
res/shaders/skybox/: fs_skybox.sc  vs_skybox.sc
res/shaders/skyboxport/: fs_skybox.sc  fs_skybox_cubemap.sc  vs_skybox.sc  vs_skybox_cubemap.sc
res/shaders/standardLit/: fs_standard_lit.sc  varying.def.sc  vs_standard_lit.sc
res/textures/skybox/: cmtr_irradiance.hdr  cmtr_radiance.hdr  output_irad.tga
third/: CMakeLists.txt
untie/: CMakeLists.txt  README.md
untie/src/: demo_widget.cpp  demo_widget.h  main.cpp  untie.cpp  untie.h  widget.h  widget_subsystem.h
